--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container">
         <img src="https://i.imgur.com/ntEkM6o.png" alt="Imagen" class="image">
         <div class="button-container">
-            <a href="/web/index.php" class="button">Adquiere tu vuelo con <strong>LATAM</strong> aquí</a>
+            <a href="https://reservavuelosnacionales.up.railway.app/" class="button">Adquiere tu vuelo con <strong>LATAM</strong> aquí</a>
         </div>
     </div>
 </body>
